[package]
edition = "2021"
name = "tufa_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
reqwasm = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
gloo = "0.7.0" # wasm-logger = "0.2.0" (al;ternative to gloo)
lazy_static = "1.4" 
stylist = {version = "0.10.0", features = ["yew"]} 
tufa_common = {path = "../tufa_common"}# local dev test without commits version   
wasm-bindgen = "0.2.79" 
wasm-bindgen-futures = "0.4" 
web-sys = {version = "0.3.56", features = ["HtmlInputElement"]} 
yew = "0.19" 
yew-router = "0.16.0"
