[package]
edition = "2021"
name = "tufa_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
reqwasm = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
colorsys = "0.6.5"
# derive_more = "0.99.17"//for children components 
gloo = "0.7.0" # wasm-logger = "0.2.0" (al;ternative to gloo)
impl_display = {path = "../proc_macros/impl_display"} 
lazy_static = "1.4" 
stylist = {version = "0.10.0", features = ["yew"]} 
tufa_common = {path = "../tufa_common"}# local dev test without commits version       
wasm-bindgen = "0.2.79" 
wasm-bindgen-futures = "0.4" 
web-sys = {version = "0.3.56", features = ["HtmlInputElement", "Window", "Document", "Element"]} 
yew = "0.19" 
yew-router = "0.16.0" 
yewdux = "0.7.0" 
yewdux-functional = "0.1.0"
convert_case = "0.5.0"
#prod
# svg_component = {path = "https://github.com/kuqmua/svg_component"}
#dev
svg_component = {path = "../proc_macros/svg_component"}